# vloxel

./: CMakeLists.txt  vloxel.cpp  vloxel.h
core/: window.cpp  window.hpp
editor/: editor.cpp  editor.hpp
